[package]
name = "yew-reactor"
version = "0.1.0"
edition = "2021"

[[test]]
name = "cucumber"
harness = false

[dependencies]
cucumber = "0.21.0"
itertools = "0.13.0"
futures = "0.3.30"
uuid = { version = "1.8", features = ["atomic", "v4", "v7", "serde"] }
yew = { version = "0.21", features = ["csr"] }

[dev-dependencies]
cucumber-trellis = "0.1.0"
