[workspace]
resolver = "2"
members = [
    "packages/*",
    "examples/*",
]

default-members = [
    "packages/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
description = "Provide reactive helping elements for Yew"
license = "MIT"
documentation = "https://docs.rs/yew-reactor"
repository = "https://github.com/corebreaker/yew-reactor"
readme = "README.md"
keywords = ["yew", "reactive", "web", "helper", "component"]
categories = ["wasm", "web-programming"]

[workspace.dependencies]
gloo-console = "0.3.0"
yew = { version = "0.21.0", features = ["csr"] }
uuid = { version = "1.10.0", features = ["atomic", "v4", "v7", "serde"] }
instant = { version = "0.1.13", features = ["wasm-bindgen", "now"] }
